--- a/compressor.css
+++ b/compressor.css
@@ -35,7 +35,7 @@ h1 {
 	text-align: center;
 }
 
-#submit {
+.submit {
 	font-size: 50px;
 	font-family: Garamond, serif;
 	text-align: center;
@@ -46,7 +46,7 @@ h1 {
 	background-color: #FFFBF3;
 }
 
-#submit:hover {
+.submit:hover {
 	background-color: #f18a29;
 }
 
