--- a/compressor.css
+++ b/compressor.css
@@ -54,7 +54,12 @@ h1 {
 }
 
 #redirectButton {
-	margin-left: 0%;
+	position: absolute;
+	
+	left: 50%;
+	transform: translate(-50%, -50%);	
+	
+	
 }
 
 /*Aurelio Adds*/
