--- a/compressor.css
+++ b/compressor.css
@@ -40,6 +40,7 @@ h1 {
 	font-family: Garamond, serif;
 	text-align: center;
 	font-weight: bold;
+	margin:auto;
 	color: #4E4E4E;
 	border: 2px solid black;
 	background-color: #FFFBF3;
@@ -47,19 +48,6 @@ h1 {
 
 .submit:hover {
 	background-color: #f18a29;
-}
-
-#originalSubmit {
-	margin-left: 42%;
-}
-
-#redirectButton {
-	position: absolute;
-	
-	left: 50%;
-	transform: translate(-50%, -50%);	
-	
-	
 }
 
 /*Aurelio Adds*/
