--- a/compressor.css
+++ b/compressor.css
@@ -50,6 +50,17 @@ h1 {
 	background-color: #f18a29;
 }
 
+#myProgress {
+	width: 100%;
+	background-color: grey;
+}
+
+#myBar {
+	width: 1%;
+	height: 30px;
+	background-color: green;
+}
+
 /*Aurelio Adds*/
 .Header_Text {
 	position: absolute;
